# claude_sandbox

cardgame/: README.md  cards.json  examples.md  rules.md
jirafik/: .env.example  backend.php  composer.json  index.html
jirafik/src/Client/: Attachment.php  Comment.php  CommentResult.php  Issue.php  JiraClientFactory.php  JiraClientInterface.php  JiraException.php  LesstifJiraClient.php  NativeJiraClient.php  SearchResult.php  Worklog.php  WorklogResult.php
tauri_demo/: .gitignore  README.md  android-build.sh  android-dev.sh  android-init.sh
tauri_demo/back/: Cargo.toml  tauri.conf.json
tauri_demo/back/icons/: README.md
tauri_demo/front/: app.js  index.html  styles.css
tauri_demo/public/: app.js  index.html  styles.css
tauri_demo/src-tauri/: tauri.conf.json
tauri_demo/src-tauri/src/: main.rs
webgpu/: 01-phong-lighting.html  02-shadow-mapping.html  03-normal-mapping.html  04-skybox.html  05-particles.html  06-bloom.html  README.md  index.html
